--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
 <body>
 	<div>
 		<div>
-			<p><span>span 0</span></p>
+			<p><span id="spanColor">span 0</span></p>
 		</div>
 		<div>
 			<p>0</p>
 		</div>
 		
 			<div>
-			<p><span>span 1</span></p>
+			<p><span id="spanColor1">span 1</span></p>
 		</div>
 		<div>
 			<p>1</p>
 		</div>
 			<div>
-			<p><span>span 2</span></p>
+			<p><span id="spanColor2">span 2</span></p>
 		</div>
 		<div>
 			<p>2</p>
 		</div>
 			<div>
-			<p><span>span 3</span></p>
+			<p><span id="spanColor3">span 3</span></p>
 		</div>
 		<div>
 			<p>3</p>
 		</div>
 			<div>
-			<p><span>span 4</span></p>
+			<p><span id="spanColor4">span 4</span></p>
 		</div>
 		<div>
 			<p>4</p>
